# COMP90025-Project1

./: CMakeLists.txt  CMakeSettings.json  README.md
Project1/: 100times.txt  CMakeLists.txt  Project1  Project1.cpp  Project1.h  consequential.slurm  default-sequential29302402.out  default-sequential29343450.out  err-29311961.err  err-29315759.err  err-29322662.err  err-29325332.err  kseqalign  kseqalign.cpp  parallel-close.slurm  parallel-experiment-1.slurm  parallel-experiment-16.slurm  parallel-experiment-2.slurm  parallel-experiment-32.slurm  parallel-experiment-4.slurm  parallel-experiment-8.slurm  parallel-experiment.slurm  parallel-single.slurm  parallel-thread-affinity-experiment.slurm  parallel-thread-affinity-experinment.slurm  parallel29302401.out  parallel29302910.out  parallel29315759.out  parallel29320988.out  parallel29322914.out  parallel29324218.out  parallel29349688.out  parallel29349779.out  parallel29349780.out  parallel29351234.out  parallel29351311.out  parallel29351606.out  parallel29351690.out  parallel29352727.out  parallel29353831.out  (+18 more)
