# CMakeList.txt : CMake project for Project1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Project1 "project1.cpp" "project1.h" "kseqalign.cpp")

# TODO: Add tests and install targets if needed.
